test/files/errors/syntaxError2.jg
_main int ()
{
    0 return;
}

42